--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,5 +1,6 @@
 .banner{
     position: relative;
+    margin-top: 50px;
     /* background: url(../../Assets/Images/Frame_1.png);
     width: 100%;
     height: 100%;
@@ -12,4 +13,27 @@
     top: 35%;
     left: 13%;
     color: #fff;
+}
+.footer_con{
+    width: 60%;
+}
+@media (max-width: 500px){
+    .footer_con{
+        width: 100%;
+    }
+    .banner_text{
+        top: 10%;
+        left: 10%;
+    }
+    .banner_bg{
+        height: 42vh;
+        object-fit: cover;
+    }
+    .head_text{
+        font-size: 12px;
+    }
+    .para{
+        margin-top: 0px;
+        font-size: 10px;
+    }
 }
