--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,6 +1,7 @@
 .banner{
     position: relative;
-    margin-top: 50px;
+    margin-top: 110px;
+    height: 100%;
     /* background: url(../../Assets/Images/Frame_1.png);
     width: 100%;
     height: 100%;
@@ -10,14 +11,21 @@
 }
 .banner_text{
     position: absolute;
-    top: 20%;
+    top: 16%;
     left: 13%;
     color: #fff;
 }
 .footer_con{
     width: 60%;
 }
+.slider_img{
+    width: 100%;
+    height: 100%;
+}
 @media (max-width: 500px){
+    .banner{
+        margin-top: 100px;
+    }
     .footer_con{
         width: 100%;
     }
@@ -35,5 +43,8 @@
     .para{
         margin-top: 0px;
         font-size: 10px;
+    }
+    .slider_img{
+        height: 400px;
     }
 }
